
Current Development Version: WSPR-4.0


2014-04-17 commit r4146 Greg Beam <ki7mt@yahoo.com>

* Fixed typo's in configure.ac + minor edits
* Minor edits & updates to wspr-dist.sh
* Added make dist: target to Makfile.in

  Requires: bash and readlink

  [USAGE]
  ./autogen.sh
  make dist
  
  Creates: ../wspr/dist/WSPR-4.0-linux.tar.gz
  
  Name and version are taken from @PROGRAM@ and @VERSION@, which is
  set in configure.ac header. If you want to change the filename,
  call the script directly from a shell.

  Note: After running make dist, you will need to run
  autogen.sh again, as make dist performs a distclean before
  building the tar.gz file, just in case something slips by.
  
  
2014-04-17 commit r4145 Greg Beam <ki7mt@yahoo.com>

* Simplify the header and lib checks
* Consolidate configure.ac and aclocal.m4
* Moved aclocal.m4 to archive/
* Updated wspr-manifest.in for aclocal.m4 change
* Updated INSTALL.TXT
* Fix typo on ${FCV} in makefile.in
* Try ${MV} w*.so once again.

For non-standard locations (Libs & Headers): 

Example:
./configure LDFLAGS='-L/home/user/test/lib' CPPFLAGS='-I/home/user/test/lib'

For Python3 and / or f2py:

Example:
./configure --with-python3='/usr/local/bin/python3' --with-f2py='/opt/bin/f2py'


2014-04-15 commit r4144 Greg Beam <ki7mt@yahoo.com>

* Updated Makefile.in, moved flag options to configure.ac based $host_os 
  to where they should be, rather than in the Makefile.
* Updated variables in Makefile.in
* Moved LDFLAG update to after libs & header check
* Sort Unique LDFLAG paths, remove duplicates

2014-04-14 commit r4142 Joe Taylor <joe@princeton.edu>

* Fixed -pthread issue with wspr0 thnix_stub file.
* Added compile w/out -Wall for thnix_stub to prevent
  warning messages during build.


2014-04-14 (2) Greg Beam <ki7mt@yahoo.com>

* Generate Makefile, even though configure fails.
* Add indicators as to what failed in Make Summary.


2014-04-14 (1) Greg Beam <ki7mt@yahoo.com>
